# snowboard

./: .gitignore  Dockerfile  app.py  chatgpt_code.py  ext_data.py  index.py  main.py  pyproject.toml  query.py  readme.md  test_app_callbacks.py  test_delete.py  test_ext_data.py
.github/: pull_request_template.md
.github/workflows/: build.yaml
pages/: ext_loyaltycards.py  ext_transactions.py
snowboard/: __init__.py  dashboard.py  settings.py  snowflake.py
snowboard/pages/: __init__.py  ext_loyaltycards.py  ext_transactions.py
tests/: test_ext_data.py
