[tool.poetry]
name = "dash-plotly-tableau-replacement"
version = "0.1.0"
description = ""
authors = ["Anand Bhakta <abhakta@bink.com>"]
readme = "README.md"
packages = [{include = "dash_plotly_tableau_replacement"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.12.0"
plotly = "^5.16.0"
pandas = "^2.0.3"
snowflake-connector-python = {extras = ["pandas"], version = "^3.1.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
