[tool.poetry]
name = "snowboard"
version = "0.1.0"
description = ""
authors = ["Anand Bhakta <abhakta@bink.com>"]
readme = "README.md"

[tool.poetry.scripts]
snowboard = "snowboard:cli"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.15.0"
pandas = "<2.2"
snowflake-connector-python = { extras = ["pandas"], version = "^3.7.0" }
dash-bootstrap-components = "^1.5.0"
typer = { extras = ["all"], version = "^0.9.0" }
azure-identity = "^1.15.0"
azure-keyvault = "^4.2.0"
pydantic-settings = "^2.2.1"
gunicorn = "^21.2.0"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
ipykernel = "^6.29.2"
ruff = "^0.2.2"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "D407", "D413"]
line-length = 250


[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
